CNCS Dev 12/src/objects/Concept_Papers__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <formula>$User.Address_Line_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Line 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <inlineHelpText>Address line 2</inlineHelpText>
        <label>Address Line 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <inlineHelpText>If different from the organization address above, please provide the primary address where the service activities will take place.</inlineHelpText>
        <label>Address line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipated_Length_of_Project_in_Months__c</fullName>
        <label>Anticipated Length of Project in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Anticipated_Length_of_Project_in_Years__c</fullName>
        <label>Anticipated Length of Project in Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Any_Comments__c</fullName>
        <description>Corporate program staff user can comment here</description>
        <label>Any Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipName>Concept_Paper</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Under Review</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold Pending Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdraw</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_you_a_former_Grantee_Sponsor__c</fullName>
        <label>Are you a former Grantee/Sponsor?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Areas_Affected_by_the_Project__c</fullName>
        <label>Areas Affected by the Project</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Choose_from_Existing_Project_Directors__c</fullName>
        <label>Choose from Existing Project Directors</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Choose_from_Existing_Project_Title__c</fullName>
        <label>Choose from Existing Project Title</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City1__c</fullName>
        <formula>$User.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Community_Or_Faith_Based__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Or Faith Based</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complete_Project__c</fullName>
        <description>How many weeks will it take a team of 8 to 12 members working full-time(40-45 hours per week) to complete this project</description>
        <label>Complete Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concept_Paper_Name__c</fullName>
        <label>Concept Paper Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concept_Papers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Concept Papers</label>
        <referenceTo>Concept_Papers__c</referenceTo>
        <relationshipName>Concept_Papers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Program</label>
        <referenceTo>Corporate_Program1__c</referenceTo>
        <relationshipName>Concept_Paper_Package</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_NCCC_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current NCCC Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Describe_how_your_plan_to_utilize_NCCC__c</fullName>
        <inlineHelpText>NCCC has effectively been used in past projects to augment and support existing youth corps partnerships with organizations. Please describe how your plan to utilize NCCC will incorporate your existing partnership with the &quot;Fee for Service&quot; corps.</inlineHelpText>
        <label>Describe how your plan to utilize NCCC</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>NCCC has effectively been used in the past projects to augmentand support existing youth corps partnerships with organizations. Please describe how your plan to utilize  NCCC will incorporate your existing partnership with &quot;Fee for Service&quot; corps.</inlineHelpText>
        <label>If yes, Fee for Service Incorporation?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disaster_Services__c</fullName>
        <label>Disaster Services</label>
        <picklist>
            <picklistValues>
                <fullName>Disaster Assistance Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Disaster Services</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Does_your_org_have_other_CNCS_resources__c</fullName>
        <label>Does your org have other CNCS resources?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Economic_Opportunity__c</fullName>
        <label>Economic Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Financial Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Economic Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microenterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Economic Development</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>School Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K-12 Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-HS Education Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Education</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Email1__c</fullName>
        <formula>$User.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email3__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Environment_Stewardship__c</fullName>
        <label>Environment Stewardship</label>
        <picklist>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At-Risk Ecosystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness &amp; Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Environmental Stewardship</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <formula>$User.Fax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_Government__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Federal Government</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fee_For_Service__c</fullName>
        <label>Fee For Service</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flexibility_of_Proposed_Dates__c</fullName>
        <label>Flexibility of Proposed Dates</label>
        <picklist>
            <picklistValues>
                <fullName>Fixed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flexible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flexible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_you_previously_worked_with_NCCC__c</fullName>
        <label>Have you previously worked with NCCC</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Healthy_Futures__c</fullName>
        <label>Healthy Futures</label>
        <picklist>
            <picklistValues>
                <fullName>Aging in Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obesity and Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access to Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Healthy Futures</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Housing_Arrangements__c</fullName>
        <inlineHelpText>In the event that housing is not available on the regional campus or your project is beyond a reasonable driving distance (1hr) from your regional campus, briefly describe the housing arrangements you are exploring for the team.</inlineHelpText>
        <label>Housing Arrangements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_did_you_find_out_about_NCCC__c</fullName>
        <label>How did you find out about NCCC?</label>
        <picklist>
            <picklistValues>
                <fullName>NCCC Alumini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCCC Staff Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State CNCS Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outreach Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous NCCC Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current NCCC Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Comm Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>How_many__c</fullName>
        <label>How many teams are being requested?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>I_am_a_Past_NCCC_Sponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I am a Past NCCC Sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_am_an_NCCC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>I am an NCCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_yes_How_Many_Members1__c</fullName>
        <label>If yes, how Many Members?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_How_Many_Members__c</fullName>
        <label>If yes, how Many Members?</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_Please_explain__c</fullName>
        <label>If yes, please explain?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>If_yes_Teams_Served__c</fullName>
        <description>How Many teams have served your organization?</description>
        <inlineHelpText>How Many teams have served your organization?</inlineHelpText>
        <label>If yes, how many teams?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_for_how_many_years__c</fullName>
        <label>If yes, for how many years?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_yes_how_many_members_participants__c</fullName>
        <label>If yes, how many members/participants?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_yes_when__c</fullName>
        <description>When did a team most recently work with your organization?</description>
        <inlineHelpText>When did a team most recently work with your organization?</inlineHelpText>
        <label>If yes, when?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indian_Tribe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indian Tribe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intermediary_Justification__c</fullName>
        <label>Intermediary Justification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Program Specific</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Local_Municipality__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Municipality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Low_income_Nat_Amer_Nat_AK_Pac_Islander__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Low-income Nat-Amer./Nat-AK/Pac-Islander</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Low_income_adults__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Low-income adults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Low_income_communities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Low-income communities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Low_income_formerly_incarcerated_adults__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Low-income formerly incarcerated adults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Low_income_formerly_incarcerated_youth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Low-income formerly incarcerated youth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Low_income_individuals_with_disabilities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Low-income individuals with disabilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Low_income_military_families__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Low-income military families</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Low_income_veterans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Low-income veterans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Low_income_youth__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Low-income youth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <label>Mailing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCCC_Alumini__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCC Alumini</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCCC_Staff_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NCCC Staff Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Narratives__c</fullName>
        <label>Narratives</label>
        <picklist>
            <picklistValues>
                <fullName>Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strengthening Communities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizational Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediary Justification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>National_Non_Profit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Non Profit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_State_Park__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National State Park</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need__c</fullName>
        <label>Need</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>No1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do you Currently or have you ever had a &quot;Fee for Service&quot; arrangement with youth corps or conversation corps program?(Fee for Service is defined as an agreement in which organization pays fees or reimburses costs to services program in exchange for member or team Support</description>
        <inlineHelpText>Do you Currently or have you ever had a &quot;Fee for Service&quot; arrangement with youth corps or conversation corps program?(Fee for Service is defined as an agreement in which organization pays fees or reimburses costs to services program in exchange for member</inlineHelpText>
        <label>No</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_weeks_to_complete_the_project__c</fullName>
        <inlineHelpText>How many weeks will it take a team of 8 to 12 members working full time (40-45 hours per week) to complete this project?</inlineHelpText>
        <label>Number of weeks to complete the project</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <formula>$User.Organization_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Representative__c</fullName>
        <formula>$User.Organization_Representative__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Representative</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizational_Capability__c</fullName>
        <label>Organizational Capability</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_CNCS_Resource__c</fullName>
        <label>Other CNCS Resource</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outreach_Presentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outreach Presentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Please_Conclude_ur_statement_with_outcom__c</fullName>
        <description>Provide a brief description about the service activities for which your organization is requesting an NCCC team. Please conclude your statement with the desired outcome expected from the involvement of NCCC.</description>
        <inlineHelpText>Provide a brief description about the service activities for which your organization is requesting an NCCC team. Please conclude your statement with the desired outcome expected from the involvement of NCCC.</inlineHelpText>
        <label>Service Activities Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Please_Specify__c</fullName>
        <label>Please Specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_NCCC_Sponsor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous NCCC Sponsor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Issue_Area__c</fullName>
        <label>Primary Issue Area</label>
        <picklist>
            <picklistValues>
                <fullName>Natural and Other Disasters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urban and Rural Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Stewardship and Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Conservations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Address__c</fullName>
        <inlineHelpText>Please enter  Project Address</inlineHelpText>
        <label>Project Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Title__c</fullName>
        <inlineHelpText>Please Enter the Title for the Project</inlineHelpText>
        <label>Project Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Website__c</fullName>
        <inlineHelpText>Please enter URL for the Project</inlineHelpText>
        <label>Project Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Proposed_End_Date__c</fullName>
        <label>Proposed End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Start_Date__c</fullName>
        <label>Proposed Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provide_Organization_Mission__c</fullName>
        <label>Provide Organization Mission</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>RFP_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFP ID</label>
        <referenceTo>RFP__c</referenceTo>
        <relationshipName>Concept_Papers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_type_name__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record type name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Campus__c</fullName>
        <description>In the event that housing is not available in the regional campus or your project is beyond a reasonable driving distance (1hr) from your regional campus, briefly describe the housing arrangements you are exploring for the team</description>
        <label>Regional Campus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requesting_Service_Activities_from_NCCC__c</fullName>
        <inlineHelpText>Provide a brief description about the service activities for which your organization is requesting a NCCC team. Please conclude your statement with the desired outcome expected from the involvement of NCCC.</inlineHelpText>
        <label>Requesting Service Activities from NCCC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State1__c</fullName>
        <formula>$User.State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_CNCS_office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State CNCS office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Comm_Community_Service_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Comm Community Service Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Government__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Government</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Enter State</description>
        <inlineHelpText>Enter State</inlineHelpText>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>WV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>